--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "jotai": "^2.12.1",
+    "lucide-react": "^0.477.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
