--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
     "jotai": "^2.12.1",
     "lucide-react": "^0.477.0",
     "next": "14.0.4",
