--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "node prisma/seed.cjs",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
@@ -21,6 +22,7 @@
     "jotai": "^2.12.1",
     "lucide-react": "^0.477.0",
     "next": "14.0.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.30.3",
